# AIServices

./: .gitignore  .gitignore 2  .structurelint.yml  CHANGELOG.md  CLAUDE.md  Makefile  Makefile 2  README.md  output.srt  output.vtt  pr_feedback.json  pyproject 2.toml  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-04-28-mlx-flux-provider.md  2026-04-29-pyright-coverage-ci.md  2026-05-01-audio2subtitle-translate-filter.md
docs/superpowers/specs/: 2026-04-28-mlx-flux-provider-design.md
examples/: audio2subtitle_example.py  image2image_example.py  image2video_example.py  text2audio_example.py  text2image_example.py  text2speech_example.py  video2audio_example.py  video2subtitle_example.py
scripts/: pipe_de2es.py  pipeline_de2es.py
templates/module/: copier.yml
templates/module/{/{module_name/}/}/: pyproject.toml.jinja
templates/module/{/{module_name/}/}/src/{/{module_name/}/}/: cli.py.jinja
templates/module/{{module_name}}/: pyproject.toml.jinja
templates/module/{{module_name}}/src/{{module_name}}/: __init__.py.jinja
