[project]
name = "aiservices-workspace"
version = "0.1.0"
description = "AI Services Monorepo Workspace"
requires-python = ">=3.11"
dependencies = [
    "aiservices-core",
    "image2image",
    "text2image",
    "image2video",
    "text2video",
    "video2audio",
    "audio2subtitle",
    "video2subtitle",
    "text2audio",
    "text2speech",
]

[tool.uv]
managed = true

[tool.uv.workspace]
members = ["packages/*"]
exclude = [
    "packages/speech2text",
    "packages/studio",
]

[tool.uv.sources]
aiservices-core = { workspace = true }
image2image = { workspace = true }
text2image = { workspace = true }
text2audio = { workspace = true }
text2speech = { workspace = true }
video2audio = { workspace = true }
audio2subtitle = { workspace = true }
video2subtitle = { workspace = true }
image2video = { workspace = true }
text2video = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "C", "B"]
ignore = []

[tool.pyright]
pythonVersion = "3.11"
pythonPlatform = "All"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
reportPrivateImportUsage = "none"
reportAttributeAccessIssue = "none"
reportCallIssue = "none"
exclude = [
    ".venv/**",
]

[tool.pytest.ini_options]
testpaths = ["packages/aiservices_core/tests", "packages/image2image/tests", "packages/text2image/tests", "packages/text2audio/tests", "packages/text2speech/tests", "packages/video2audio/tests", "packages/audio2subtitle/tests", "packages/video2subtitle/tests", "packages/image2video/tests", "packages/text2video/tests"]
addopts = "--import-mode=importlib"

[tool.coverage.run]
branch = true
source = [
    "aiservices_core",
    "image2image",
    "text2image",
    "text2audio",
    "text2speech",
    "video2audio",
    "audio2subtitle",
    "video2subtitle",
    "image2video",
    "text2video",
]
omit = [
    "*/tests/*",
]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "pass$",
]

[tool.mutmut]
paths_to_mutate = ["src/aiservices_core"]
pytest_add_cli_args_test_selection = ["tests/"]
pytest_add_cli_args = ["-o", "testpaths=.", "-o", "addopts=", "-o", "pythonpath=src"]
also_copy = ["tests/"]
debug = true

[dependency-groups]
dev = [
    "copier>=9.14.3",
    "ctranslate2>=4.0.0",
    "mutmut>=3.5.0",
    "pandas>=2.0.0",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.12",
    "spacy>=3.0.0",
    "transformers>=4.30.0",
]
